# azure-ai-workshop

./: .env.sample  01_OpenAI_getting_started.ipynb  02_ChatCompletion_api.ipynb  03_movie_classification_unsupervised_incl_recommendations_solution.ipynb  05_OpenAI_parameters.ipynb  06_best_practice.ipynb  07_prompt_engineering.ipynb  08_LLM_RAG_demo.ipynb  09_Function_Calling.ipynb  10_Vision.ipynb  11_Assistant.ipynb  12_responses.ipynb  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh  setup.sh
advanced/: AAS_bing_grounding.ipynb  nl2nosql_ko.ipynb  nl2nosql_lg.ipynb  vector_search_for_llm.ipynb
data/: lgproduct.json
