[project]
name = "azure-ai-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib==3.9.0",
    "openai==1.82.0",
    "pandas==2.3.2",
    "python-dotenv==1.0.1",
    "requests==2.32.2",
    "tenacity==8.2.3",
    "tiktoken==0.11.0",
    "serpapi==0.1.5",
    "azure-search-documents==11.6.0b12",
    "azure-identity>=1.22.0",
    "scrapy==2.11.0",
    "beautifulsoup4==4.12.2",
    "azure-ai-projects==1.0.0b10",
    "redis==6.1.0",
    "azure-ai-evaluation[redteam]==1.7.0",
    "ipykernel",
    "diagrams>=0.24.4",
    "graphviz>=0.20.3",
    "pymongo>=4.6.0",
    "langchain>=0.1.20",
    "langchain-openai>=0.1.6",
    "langgraph>=0.0.51",
]

[tool.setuptools.packages.find]
exclude = ["data*", "advanced*"]
